<resources>
    <string name="app_name">Contacts App</string>
    <string name="imageViewLogo_text">Contacts Logo</string>
    <string name="editTextTextEmailAddress_hint">Input your email</string>
    <string name="editTextPassword_hint">Input your password</string>
    <string name="checkBoxRecordarme_text">Remember me</string>
    <string name="buttonLogin_text">Login</string>
    <string name="textViewOlvidoContraseña_texto"><u>Forgot your password?</u></string>
    <string name="buttonRegistrarse_text">Sign Up</string>
    <string name="buttonRegistrarseConGoogle_text">Sign Up with Google</string>
    <string name="email_NoValido">email not valid</string>
    <string name="password_longitudNoValida">Password must be at least 8 characters</string>
    <string name="textViewUserId_texto">Codigo:</string>
    <string name="textViewFirstName_texto">Nombre:</string>
    <string name="textViewLastName_texto">Apellido:</string>
    <string name="textViewPhoneNumber_texto" translatable="false">Numero de Telefono:</string>
    <string name="textViewEmailAddress_texto">Correo Electronico:</string>
    <string name="buttonSave_texto">Save</string>
    <string name="buttonView_texto">View</string>
    <string name="buttonUpdate_texto">Update</string>
    <string name="buttonDelete_texto">Delete</string>
    <string name="buttonCall_texto">Call</string>
</resources>