<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PrincipalActivity">

    <TextView
        android:id="@+id/textViewUserId"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/textViewUserId_texto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextUserId"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:autofillHints=""
        android:background="#5BC5C5C5"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="@+id/textViewUserId"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textViewUserId"
        app:layout_constraintTop_toTopOf="@+id/textViewUserId" />

    <TextView
        android:id="@+id/textViewFirstName"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/textViewFirstName_texto"
        app:layout_constraintStart_toStartOf="@+id/textViewUserId"
        app:layout_constraintTop_toBottomOf="@+id/textViewUserId" />

    <EditText
        android:id="@+id/editTextFirstName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/textViewFirstName"
        app:layout_constraintEnd_toEndOf="@+id/editTextUserId"
        app:layout_constraintStart_toEndOf="@+id/textViewFirstName"
        app:layout_constraintTop_toTopOf="@+id/textViewFirstName" />
    <TextView
        android:id="@+id/textViewLastName"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/textViewLastName_texto"
        app:layout_constraintStart_toStartOf="@+id/textViewFirstName"
        app:layout_constraintTop_toBottomOf="@+id/textViewFirstName" />

    <EditText
        android:id="@+id/editTextLastName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/textViewLastName"
        app:layout_constraintEnd_toEndOf="@+id/editTextFirstName"
        app:layout_constraintStart_toEndOf="@+id/textViewLastName"
        app:layout_constraintTop_toTopOf="@+id/textViewLastName" />
    <TextView
        android:id="@+id/textViewPhoneNumber"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/textViewPhoneNumber_texto"
        app:layout_constraintStart_toStartOf="@+id/textViewLastName"
        app:layout_constraintTop_toBottomOf="@+id/textViewLastName" />

    <EditText
        android:id="@+id/editTextPhoneNumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="phone"
        app:layout_constraintBottom_toBottomOf="@+id/textViewPhoneNumber"
        app:layout_constraintEnd_toEndOf="@+id/editTextLastName"
        app:layout_constraintStart_toEndOf="@+id/textViewPhoneNumber"
        app:layout_constraintTop_toTopOf="@+id/textViewPhoneNumber" />

    <TextView
        android:id="@+id/textViewEmailAddress"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/textViewEmailAddress_texto"
        app:layout_constraintStart_toStartOf="@+id/textViewPhoneNumber"
        app:layout_constraintTop_toBottomOf="@+id/textViewPhoneNumber" />

    <EditText
        android:id="@+id/editTextEmailAddress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="@+id/textViewEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/editTextPhoneNumber"
        app:layout_constraintStart_toEndOf="@+id/textViewEmailAddress"
        app:layout_constraintTop_toTopOf="@+id/textViewEmailAddress" />

    <ListView
        android:id="@+id/listViewContacts"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginTop="16dp"
        android:background="#83787A7A"
        app:layout_constraintEnd_toEndOf="@+id/editTextEmailAddress"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textViewEmailAddress"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmailAddress" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/listViewContacts"
        app:layout_constraintStart_toStartOf="@+id/listViewContacts"
        app:layout_constraintTop_toBottomOf="@+id/listViewContacts">

        <Button
            android:id="@+id/buttonSave"
            android:layout_width="73dp"
            android:layout_height="wrap_content"
            android:text="@string/buttonSave_texto" />

        <Button
            android:id="@+id/buttonView"
            android:layout_width="77dp"
            android:layout_height="wrap_content"
            android:text="@string/buttonView_texto" />

        <Button
            android:id="@+id/buttonUpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonUpdate_texto" />

        <Button
            android:id="@+id/buttonDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonDelete_texto" />

        <Button
            android:id="@+id/buttonCall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableLeft="@drawable/ic_baseline_phone_forwarded_24" />
            android:text="" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>