<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textViewUserId"
        android:layout_width="46dp"
        android:layout_height="17dp"
        android:layout_marginEnd="20dp"
        android:text="@string/textViewUserId_texto"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toStartOf="@+id/textViewFirstName"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <TextView
        android:id="@+id/textViewFirstName"
        android:layout_width="65dp"
        android:layout_height="18dp"
        android:layout_marginEnd="16dp"
        android:text="@string/textViewFirstName_texto"
        app:layout_constraintBottom_toBottomOf="@+id/textViewUserId"
        app:layout_constraintEnd_toStartOf="@+id/textViewLastName"
        app:layout_constraintTop_toTopOf="@+id/textViewUserId"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textViewLastName"
        android:layout_width="131dp"
        android:layout_height="18dp"
        android:layout_marginEnd="60dp"
        android:text="@string/textViewLastName_texto"
        app:layout_constraintBottom_toBottomOf="@+id/textViewFirstName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textViewFirstName" />

    <TextView
        android:id="@+id/textViewPhoneNumber"
        android:layout_width="273dp"
        android:layout_height="19dp"
        android:text="@string/textViewPhoneNumber_texto"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="@+id/textViewLastName"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textViewUserId"
        app:layout_constraintTop_toTopOf="@+id/imageView2"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textViewEmailAddress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/textViewEmailAddress_texto"
        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="@+id/textViewPhoneNumber"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textViewPhoneNumber"
        app:layout_constraintTop_toTopOf="@+id/imageView3" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="32dp"
        android:layout_height="31dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="28dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_my_calendar" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="31dp"
        android:layout_height="28dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toStartOf="@+id/textViewPhoneNumber"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:srcCompat="@android:drawable/stat_sys_phone_call" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="29dp"
        android:layout_height="27dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toStartOf="@+id/textViewEmailAddress"
        app:layout_constraintHorizontal_bias="0.181"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:srcCompat="@android:drawable/ic_dialog_email" />

</androidx.constraintlayout.widget.ConstraintLayout>